--- a/SchultzHanson.Web/Content/site.less
+++ b/SchultzHanson.Web/Content/site.less
@@ -27,21 +27,28 @@ header {
 
     h2 {
 		float: right;
+		font-size: 1.6em;
+		line-height: 1.6;
         line-height: 3.2;
 		margin-bottom: 0;
     }
 }
 
-h2 {
+#main {
 	font-size: 1.6em;
+	line-height: 1.6;
+}
+
+h2 {
 	font-weight: bold;
-	line-height:1.6;
 	margin-bottom:.8em;
 }
 
 p {
-	font-size: 1.6em;
-	line-height:1.6;
+	margin-bottom:.8em;
+}
+
+ul {
 	margin-bottom:.8em;
 }
 
