--- a/SchultzHanson.Web/Views/Home/Index.cshtml
+++ b/SchultzHanson.Web/Views/Home/Index.cshtml
@@ -12,3 +12,11 @@
 
 <h2>Reception</h2>
 <p>A reception will follow at the Charles Allis museum, at 5:00 p.m.</p>
+
+<h2>Hotel</h2>
+<p>Coming soon!</p>
+
+<h2>Registry</h2>
+<ul>
+    <li><a href="http://www.target.com/wedd/registry/sKwTZEstwjLiPF3ORG1ArQ">Target</a></li>
+</ul>
