--- a/SchultzHanson.Web/Views/Shared/_Layout.cshtml
+++ b/SchultzHanson.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,9 @@
             <h1>Josh & Alicia</h1>
             <h2>April 20, 2013</h2>
         </header>
-        @RenderBody()
+        <div id="main">
+            @RenderBody()
+        </div>
     </div>
 
     <!-- TODO:
