--- a/SchultzHanson.Web/Views/Home/Index.cshtml
+++ b/SchultzHanson.Web/Views/Home/Index.cshtml
@@ -18,5 +18,6 @@
 
 <h2>Registry</h2>
 <ul>
+    <li><a href="http://www.bedbathandbeyond.com/regGiftRegistry.asp?wrn=-481879363">Bed Beth &amp; Beyond</a></li>
     <li><a href="http://www.target.com/wedd/registry/sKwTZEstwjLiPF3ORG1ArQ">Target</a></li>
 </ul>
