--- a/SchultzHanson.Web/Views/Home/Index.cshtml
+++ b/SchultzHanson.Web/Views/Home/Index.cshtml
@@ -4,19 +4,33 @@
 }
 
 <p>
-    <img src="@Url.Content("~/Content/images/photos/bench.jpg")" />
+    <img src="@Url.Content("~/Content/images/photos/bench.jpg")" class="wide" />
 </p>
 
-<h2>Ceremony</h2>
-<p>The ceremony will take place at 3:00 p.m. Villa Terrace Decorative Arts Museum.</p>
+<p>Welcome to the wedding website of Josh Schultz and Alicia Hanson! We look forward to seeing you on our special day.</p>
 
-<h2>Reception</h2>
+<h3>Ceremony</h3>
+<p>The ceremony will take place at 3:00 p.m. at Villa Terrace Decorative Arts Museum.</p>
+
+<h3>Reception</h3>
 <p>A reception will follow at the Charles Allis museum, at 5:00 p.m.</p>
 
-<h2>Hotel</h2>
-<p>Coming soon!</p>
+<h3>Hotel Accomodations</h3>
+<p>
+    Knickerbocker on the Lake<br />
+    1028 E. Juneau Ave.<br />
+    Milwaukee, WI 53202<br />
+    Reservations: <a href="tel://1-414-276-8500">(414) 276-8500</a></br>
+    <a href="http://www.knickerbockeronthelake.com">www.knickerbockeronthelake.com</a>
+</p>
+<p>
+    We have blocked a limited number of hotel rooms at the Knickerbocker on the Lake for our reception.
+    Please call the hotel at <nobr><a href="tel://1-414-276-8500">(414) 276-8500</a></nobr> by March 29, 2013 and be sure to mention the Hanson-Schultz
+    wedding. We have arranged for a $99 rate for their standard queen bed rooms. Please note check-in time is 3:00 p.m.
+    and check-out is 12:00 p.m.
+</p>
 
-<h2>Registry</h2>
+<h3>Registry</h3>
 <ul>
     <li><a href="http://www.bedbathandbeyond.com/regGiftRegistry.asp?wrn=-481879363">Bed Beth &amp; Beyond</a></li>
     <li><a href="http://www.target.com/wedd/registry/sKwTZEstwjLiPF3ORG1ArQ">Target</a></li>
