--- a/SchultzHanson.Web/Content/site.css
+++ b/SchultzHanson.Web/Content/site.css
@@ -1,44 +1,131 @@
 ﻿body {
-  border-top: 3px solid #000000;
-  color: #000000;
+  background: #ffffee;
+  color: #444444;
   font-family: sans-serif;
   font-size: 62.5%;
+  line-height: 1.6;
 }
-body > div {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #aabb44;
+  font-family: serif;
+  text-transform: uppercase;
+  font-weight: normal;
+}
+h1 {
+  font-size: 2.8em;
+}
+h2 {
+  font-size: 2.0em;
+  font-weight: bold;
+}
+h3 {
+  font-size: 1.6em;
+}
+a {
+  color: #444444;
+}
+p,
+ul,
+label {
+  font-size: 1.4em;
+  text-transform: lowercase;
+}
+.cf:before,
+.cf:after {
+  content: " ";
+  /* 1 */
+
+  display: table;
+  /* 2 */
+
+}
+.cf:after {
+  clear: both;
+}
+.cf {
+  *zoom: 1;
+}
+.nav-wrapper {
+  background: #000000;
+}
+.nav-wrapper .nav {
+  color: #ffffff;
+  font-weight: bold;
+  line-height: 2.4;
   margin: 0 auto;
   max-width: 960px;
   padding: 0 1em;
 }
-header {
+.nav-wrapper .nav li {
+  display: inline-block;
+  margin-right: .3em;
+}
+.nav-wrapper .nav a {
+  color: #ffffff;
+  text-decoration: none;
+}
+.nav-wrapper .nav li.home a {
+  background: url(images/home.png) no-repeat #000000;
+  background-position: 4px 4px;
+  display: inline-block;
+  height: 28px;
+  text-indent: -999em;
+  width: 28px;
+}
+.header {
   text-align: right;
 }
-header h1 {
+.header h1 {
   float: left;
-  font-size: 3.2em;
-  line-height: 1.6;
+  line-height: 1.8;
 }
-header h2 {
+.header h2 {
   float: right;
-  font-size: 1.6em;
-  line-height: 1.6;
-  line-height: 3.2;
+  font-weight: normal;
+  font-size: 1.4em;
+  line-height: 3.4;
   margin-bottom: 0;
 }
 #main {
-  font-size: 1.6em;
-  line-height: 1.6;
+  margin: 0 auto;
+  max-width: 960px;
+  padding: 0 1em;
 }
-h2 {
-  font-weight: bold;
+#main h2 {
+  margin-bottom: .2em;
+}
+#main p {
   margin-bottom: .8em;
 }
-p {
+#main ul {
   margin-bottom: .8em;
 }
-ul {
-  margin-bottom: .8em;
+#main img {
+  border: solid 1px #444444;
 }
-img {
+#main img.wide {
   max-width: 100%;
   width: 100%;
+}
+#main .direction-section {
+  margin-bottom: 1em;
+}
+#main .direction-section .google-map {
+  float: left;
+  margin-right: 1em;
+}
+#main .direction-section .direction-list {
+  float: left;
+}
+@media all and (min-width: 380px) {
+  .header h1 {
+    background: url(images/bird-right.jpg) no-repeat transparent;
+    background-position: left 0;
+    padding-left: 52px;
+  }
 }
