added Williams-Sonoma link; updated bird image to have ivory background

--- a/SchultzHanson.Web/Content/site.less
+++ b/SchultzHanson.Web/Content/site.less
@@ -149,7 +149,7 @@ p, ul, label {
 @media all and (min-width:380px) {
     .header {
         h1 {
-            background: url(images/bird-right.jpg) no-repeat transparent;
+            background: url(images/bird-right.png) no-repeat transparent;
             background-position: left 0;
             padding-left: 52px;
         }
