--- a/SchultzHanson.Web/Views/Home/Index.cshtml
+++ b/SchultzHanson.Web/Views/Home/Index.cshtml
@@ -34,4 +34,5 @@
 <ul>
     <li><a href="http://www.bedbathandbeyond.com/regGiftRegistry.asp?wrn=-481879363">Bed Bath &amp; Beyond</a></li>
     <li><a href="http://www.target.com/wedd/registry/sKwTZEstwjLiPF3ORG1ArQ">Target</a></li>
+    <li><a href="http://www.williams-sonoma.com/registry/3025757/registry-list.html">Williams-Sonoma</a></li>
 </ul>
