--- a/SchultzHanson.Web/Content/site.css
+++ b/SchultzHanson.Web/Content/site.css
@@ -124,7 +124,7 @@ label {
 }
 @media all and (min-width: 380px) {
   .header h1 {
-    background: url(images/bird-right.jpg) no-repeat transparent;
+    background: url(images/bird-right.png) no-repeat transparent;
     background-position: left 0;
     padding-left: 52px;
   }
