removed home icon because it was weird and looked crappy on retina displays; removed guestbook link from nav for now

--- a/SchultzHanson.Web/Views/Shared/_Layout.cshtml
+++ b/SchultzHanson.Web/Views/Shared/_Layout.cshtml
@@ -14,10 +14,9 @@
 <body>
     <div class="nav-wrapper">
         <ul class="nav">
-            <li class="home"><a href="@Url.Action("Index", "Home")">Home</a></li>
+            <li><a href="@Url.Action("Index", "Home")">Home</a></li>
             <li><a href="@Url.Action("Directions", "Home")">Directions</a></li>
             <li><a href="@Url.Action("WeddingParty", "Home")">Wedding Party</a></li>
-            <li><a href="@Url.Action("Guestbook", "Home")">Guestbook</a></li>
         </ul>
     </div>
     <div id="main">
