--- a/SchultzHanson.Web/Views/Home/Directions.cshtml
+++ b/SchultzHanson.Web/Views/Home/Directions.cshtml
@@ -6,7 +6,7 @@
 <h2>Directions</h2>
 
 <div class="direction-section cf">
-    <h3>Villa Terrace (Ceremony)</h3>
+    <h3>Villa Terrace Decorative Arts Museum (Ceremony)</h3>
     <p>2220 N. Terrace Ave<br />Milwaukee, WI 53202<br /><a href="tel://1-414-271-3656">414-271-3656</a></p>
     <p class="google-map">
         <img src="@Url.Content("/Content/images/villa-terrace-map.png")" width="300" />
@@ -20,7 +20,7 @@
 </div>
 
 <div class="direction-section cf">
-    <h3>Allis Museum (Reception)</h3>
+    <h3>Charles Allis Museum (Reception)</h3>
     <p>1801 N. Prospect Ave.<br />Milwaukee, WI 53202<br /><a href="tel://1-414-278-8295">414-278-8295</a></p>
     <p class="google-map">
         <img src="@Url.Content("/Content/images/allis-map.png")" width="300" />
@@ -32,7 +32,7 @@
 </div>
 
 <div class="direction-section cf">
-    <h3>Knickerbocker Hotel</h3>
+    <h3>The Knickerbocker on the Lake (Hotel)</h3>
     <p>1028 E. Juneau Ave.<br />Milwaukee, WI 53202<br /><a href="tel://1-414-276-8500">414-276-8500</a></p>
     <p class="google-map">
         <img src="@Url.Content("/Content/images/knick-map.png")" width="300" />
