--- a/SchultzHanson.Web/Views/Home/Index.cshtml
+++ b/SchultzHanson.Web/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 <p>The ceremony will take place at 3:00 p.m. at Villa Terrace Decorative Arts Museum.</p>
 
 <h3>Reception</h3>
-<p>A reception will follow at the Charles Allis museum, at 5:00 p.m.</p>
+<p>A reception will follow at the Charles Allis Museum, at 5:00 p.m.</p>
 
 <h3>Hotel Accomodations</h3>
 <p>
