converted whole site to use Twitter Bootstrap, to improve responsive design facets and add the neato responsive dropdown menu

--- a/SchultzHanson.Web/Views/Home/Directions.cshtml
+++ b/SchultzHanson.Web/Views/Home/Directions.cshtml
@@ -9,7 +9,7 @@
     <h3>Villa Terrace Decorative Arts Museum (Ceremony)</h3>
     <p>2220 N. Terrace Ave<br />Milwaukee, WI 53202<br /><a href="tel://1-414-271-3656">414-271-3656</a></p>
     <p class="google-map">
-        <img src="@Url.Content("/Content/images/villa-terrace-map.png")" width="300" />
+        <img src="@Url.Content("/Content/images/villa-terrace-map.png")" width="300" class="img-bordered" />
     </p>
     <ul class="direction-list">
         <li><a href="http://goo.gl/maps/VFcFY">From Oshkosh</a></li>
@@ -23,7 +23,7 @@
     <h3>Charles Allis Museum (Reception)</h3>
     <p>1801 N. Prospect Ave.<br />Milwaukee, WI 53202<br /><a href="tel://1-414-278-8295">414-278-8295</a></p>
     <p class="google-map">
-        <img src="@Url.Content("/Content/images/allis-map.png")" width="300" />
+        <img src="@Url.Content("/Content/images/allis-map.png")" width="300" class="img-bordered" />
     </p>
     <ul class="direction-list">
         <li><a href="http://goo.gl/maps/DV1tx">From Villa Terrace Museum</a></li>
@@ -35,7 +35,7 @@
     <h3>The Knickerbocker on the Lake (Hotel)</h3>
     <p>1028 E. Juneau Ave.<br />Milwaukee, WI 53202<br /><a href="tel://1-414-276-8500">414-276-8500</a></p>
     <p class="google-map">
-        <img src="@Url.Content("/Content/images/knick-map.png")" width="300" />
+        <img src="@Url.Content("/Content/images/knick-map.png")" width="300" class="img-bordered" />
     </p>
     <ul class="direction-list">
         <li><a href="http://goo.gl/maps/OgMNM">From Oshkosh</a></li>
