--- a/SchultzHanson.Web/Views/Home/Index.cshtml
+++ b/SchultzHanson.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <p>
-    <img src="@Url.Content("~/Content/images/photos/bench.jpg")" class="wide" />
+    <img src="@Url.Content("~/Content/images/photos/bench.jpg")" class="img-bordered" />
 </p>
 
 <p>Welcome to the wedding website of Josh Schultz and Alicia Hanson! We look forward to seeing you on our special day.</p>
@@ -31,8 +31,9 @@
 </p>
 
 <h3>Registry</h3>
-<ul>
+<ul class="registry-list">
     <li><a href="http://www.bedbathandbeyond.com/regGiftRegistry.asp?wrn=-481879363">Bed Bath &amp; Beyond</a></li>
     <li><a href="http://www.target.com/wedd/registry/sKwTZEstwjLiPF3ORG1ArQ">Target</a></li>
     <li><a href="http://www.williams-sonoma.com/registry/3025757/registry-list.html">Williams-Sonoma</a></li>
 </ul>
+
