--- a/SchultzHanson.Web/Content/site.css
+++ b/SchultzHanson.Web/Content/site.css
@@ -2,8 +2,8 @@
   background: #ffffee;
   color: #444444;
   font-family: sans-serif;
-  font-size: 62.5%;
-  line-height: 1.6;
+  text-transform: lowercase;
+  margin-bottom: 20px;
 }
 h1,
 h2,
@@ -13,36 +13,38 @@ h5,
 h6 {
   color: #aabb44;
   font-family: serif;
-  text-transform: uppercase;
   font-weight: normal;
+  margin: 0;
+  text-transform: uppercase;
 }
 h1 {
-  font-size: 2.8em;
+  font-size: 28px;
+  line-height: 50px;
 }
 h2 {
-  font-size: 2.0em;
+  font-size: 20px;
   font-weight: bold;
+  line-height: 1.6;
 }
 h3 {
-  font-size: 1.6em;
+  font-size: 16px;
+  line-height: 1.6;
+}
+h4 {
+  font-size: 14px;
+  line-height: 50px;
 }
 a {
   color: #444444;
+  text-decoration: underline;
 }
-p,
-ul,
-label {
-  font-size: 1.4em;
-  text-transform: lowercase;
+a:hover {
+  color: #444444;
 }
 .cf:before,
 .cf:after {
   content: " ";
-  /* 1 */
-
   display: table;
-  /* 2 */
-
 }
 .cf:after {
   clear: both;
@@ -50,74 +52,81 @@ label {
 .cf {
   *zoom: 1;
 }
-.nav-wrapper {
-  background: #000000;
+/*
+
+#main {
+
+    img {
+        border: solid 1px @grey;
+    }
+
+        img.wide {
+            max-width: 100%;
+            width: 100%;
+        }
+
+    .direction-section {
+		margin-bottom:1em;
+
+		.google-map {
+			float: left;
+			margin-right: 1em;
+		}
+
+		.direction-list {
+			float: left;
+		}
+    }
+
 }
-.nav-wrapper .nav {
-  color: #ffffff;
-  font-weight: bold;
-  line-height: 2.4;
-  margin: 0 auto;
-  max-width: 960px;
-  padding: 0 1em;
+
+
+@media all and (min-width:380px) {
+    .header {
+        h1 {
+            background: url(images/bird-right.png) no-repeat transparent;
+            background-position: left 0;
+            padding-left: 52px;
+        }
+    }
 }
-.nav-wrapper .nav li {
-  display: inline-block;
-  margin-right: .3em;
-}
-.nav-wrapper .nav a {
-  color: #ffffff;
-  text-decoration: none;
-}
-.header {
-  text-align: right;
-}
-.header h1 {
-  float: left;
-  line-height: 1.8;
-}
-.header h2 {
-  float: right;
-  font-weight: normal;
-  font-size: 1.4em;
-  line-height: 3.4;
+
+*/
+.navbar {
   margin-bottom: 0;
 }
-#main {
-  margin: 0 auto;
-  max-width: 960px;
-  padding: 0 1em;
+.navbar-inverse .brand,
+.navbar-inverse .nav > li > a {
+  color: #ffffff;
+  text-shadow: none;
 }
-#main h2 {
-  margin-bottom: .2em;
+.navbar-inverse .nav-collapse .nav > li > a,
+.navbar-inverse .nav-collapse .dropdown-menu a {
+  color: #ffffff;
 }
-#main p {
-  margin-bottom: .8em;
+.icon-bird {
+  background: url(images/bird-right.png) no-repeat transparent;
+  background-position: left 0;
+  height: 48px;
+  margin-right: 10px;
+  width: 42px;
 }
-#main ul {
-  margin-bottom: .8em;
-}
-#main img {
+.img-bordered {
   border: solid 1px #444444;
 }
-#main img.wide {
-  max-width: 100%;
-  width: 100%;
+.registry-list {
+  list-style-type: none;
+  margin: 0;
 }
-#main .direction-section {
+.direction-section {
   margin-bottom: 1em;
 }
-#main .direction-section .google-map {
+.direction-section .google-map {
   float: left;
   margin-right: 1em;
 }
-#main .direction-section .direction-list {
+.direction-section .direction-list {
   float: left;
-}
-@media all and (min-width: 380px) {
-  .header h1 {
-    background: url(images/bird-right.png) no-repeat transparent;
-    background-position: left 0;
-    padding-left: 52px;
-  }
+  list-style-type: none;
+  margin: 0;
 }
