--- a/SchultzHanson.Web/Content/site.less
+++ b/SchultzHanson.Web/Content/site.less
@@ -10,43 +10,52 @@ body {
 	background: @ivory;
 	color: @grey;
 	font-family:sans-serif;
-	font-size: 62.5%;
-	line-height: 1.6;
+	text-transform: lowercase;
+	margin-bottom:20px;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	color: @green;
 	font-family:serif;
-	text-transform: uppercase;
 	font-weight:normal;
+	margin:0;
+	text-transform: uppercase;
 }
 
 h1 {
-    font-size: 2.8em;
+    font-size:28px;
+	line-height:50px;
 }
 
 h2 {
-	font-size: 2.0em;
-	font-weight:bold;
+	font-size: 20px;
+	font-weight: bold;
+	line-height:1.6;
 }
 
 h3 {
-	font-size: 1.6em;
+	font-size: 16px;
+	line-height:1.6;
+}
+
+h4 {
+	font-size: 14px;
+	line-height:50px;
 }
 
 a {
-	color:@grey;
+  color: @grey;
+  text-decoration: underline;
 }
 
-p, ul, label {
-	font-size: 1.4em;
-	text-transform: lowercase;
+a:hover {
+  color: @grey;
 }
 
 .cf:before,
 .cf:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+    content: " "; 
+    display: table; 
 }
 .cf:after {
     clear: both;
@@ -55,63 +64,10 @@ p, ul, label {
     *zoom: 1;
 }
 
-.nav-wrapper {
-    background: @black;
 
-    .nav {
-        color: @white;
-        font-weight: bold;
-        line-height: 2.4;
-        margin: 0 auto;
-        max-width: 960px;
-        padding: 0 1em;
-
-        li {
-            display: inline-block;
-            margin-right: .3em;
-        }
-
-        a {
-            color: @white;
-            text-decoration: none;
-        }
-
-    }
-}
-
-.header {
-    text-align: right;
-
-    h1 {
-        float: left;
-		line-height: 1.8;
-    }
-
-    h2 {
-		float: right;
-		font-weight:normal;
-		font-size: 1.4em;
-        line-height: 3.4;
-		margin-bottom: 0;
-    }
-}
+/*
 
 #main {
-    margin: 0 auto;
-    max-width: 960px;
-    padding: 0 1em;
-
-    h2 {
-        margin-bottom: .2em;
-    }
-
-    p {
-        margin-bottom: .8em;
-    }
-
-    ul {
-        margin-bottom: .8em;
-    }
 
     img {
         border: solid 1px @grey;
@@ -146,4 +102,53 @@ p, ul, label {
             padding-left: 52px;
         }
     }
+}
+
+*/
+
+.navbar {
+  margin-bottom: 0;
+}
+
+.navbar-inverse .brand,
+.navbar-inverse .nav > li > a {
+  color: @white;
+  text-shadow: none;
+}
+
+.navbar-inverse .nav-collapse .nav > li > a,
+.navbar-inverse .nav-collapse .dropdown-menu a {
+  color: @white;
+}
+
+.icon-bird {
+    background: url(images/bird-right.png) no-repeat transparent;
+    background-position: left 0;
+	height:48px;
+	margin-right:10px;
+	width:42px;
+}
+
+.img-bordered {
+    border: solid 1px @grey;
+}
+
+.registry-list {
+	list-style-type: none;
+	margin:0;
+}
+
+.direction-section {
+	margin-bottom:1em;
+
+	.google-map {
+		float: left;
+		margin-right: 1em;
+	}
+
+	.direction-list {
+		float: left;
+		list-style-type: none;
+		margin:0;
+	}
 }
