added note about hotel parking

--- a/SchultzHanson.Web/Views/Home/Index.cshtml
+++ b/SchultzHanson.Web/Views/Home/Index.cshtml
@@ -29,6 +29,9 @@
     wedding. We have arranged for a $99 rate for their standard queen bed rooms. Please note check-in time is 3:00 p.m.
     and check-out is 12:00 p.m.
 </p>
+<p>
+    Please also note that parking at the Knickerbocker on the Lake is $15 a night, and first come, first served.
+</p>
 
 <h3>Registry</h3>
 <ul class="registry-list">
