--- a/SchultzHanson.Web/Content/site.css
+++ b/SchultzHanson.Web/Content/site.css
@@ -130,3 +130,14 @@ a:hover {
   list-style-type: none;
   margin: 0;
 }
+.wedding-party-profile {
+  margin-bottom: 1.6em;
+}
+.wedding-party-profile h4 {
+  line-height: 1;
+  margin-bottom: .6em;
+}
+.wedding-party-profile img {
+  float: left;
+  margin-right: 10px;
+}
