--- a/SchultzHanson.Web/Content/site.less
+++ b/SchultzHanson.Web/Content/site.less
@@ -152,3 +152,17 @@ a:hover {
 		margin:0;
 	}
 }
+
+.wedding-party-profile {
+    margin-bottom: 1.6em;
+
+    h4 {
+        line-height: 1;
+        margin-bottom: .6em;
+    }
+
+    img {
+        float:left;
+        margin-right:10px;
+    }
+}
