--- a/SchultzHanson.Web/Views/Home/WeddingParty.cshtml
+++ b/SchultzHanson.Web/Views/Home/WeddingParty.cshtml
@@ -5,4 +5,62 @@
 
 <h2>Wedding Party</h2>
 
-<p>Coming soon</p>
+<div class="wedding-party-profile cf">
+    <img src="@Url.Content("~/Content/images/photos/hillary.jpg")" width="160" />
+    <h4>Hillary Hanson: Maid of Honor</h4>
+    <p>Hillary is Alicia's big sister, not to mention close friend and former roommate. They're about as tight as two sisters can get.</p>
+</div>
+
+<div class="wedding-party-profile cf">
+    <img src="@Url.Content("~/Content/images/photos/robin.jpg")" width="160" />
+    <h4>Robin Schultz: Bridesmaid</h4>
+    <p>Robin is Josh's little sister. They traveled across the country together once to stalk Corey Hart.</p>
+</div>
+
+<div class="wedding-party-profile cf">
+    <img src="@Url.Content("~/Content/images/photos/rochelle.jpg")" width="160" />
+    <h4>Rochelle Van Hart: Bridesmaid</h4>
+    <p>Rochelle is a long-time friend of both Alicia and Josh. She's probably the person most responsible for fixing them up. Be sure to thank her when you're enjoying the free booze at the reception.</p>
+</div>
+
+<div class="wedding-party-profile cf">
+    <img src="@Url.Content("~/Content/images/photos/molly.jpg")" width="160" />
+    <h4>Molly Loucks: Bridesmaid</h4>
+    <p>Molly has been one of Alicia's good friends for years. She and Josh have also hit it off lately, since discovering their mutual love of bar trivia.</p>
+</div>
+
+<div class="wedding-party-profile cf">
+    <img src="@Url.Content("~/Content/images/photos/kevin.jpg")" width="160" />
+    <h4>Kevin Conway: Best Man</h4>
+    <p>Kevin lived with Josh through most of college, so he knows better than anyone what Alicia's going to be putting up with for the next few decades.</p>
+</div>
+
+<div class="wedding-party-profile cf">
+    <img src="@Url.Content("~/Content/images/photos/rick.jpg")" width="160" />
+    <h4>Rick Hanson: Groomsman</h4>
+    <p>Rick is Alicia's big brother. He's not thrilled to have to put on a suit for this, but he's happy for his little sister on her big day.</p>
+</div>
+
+<div class="wedding-party-profile cf">
+    <img src="@Url.Content("~/Content/images/photos/jody.jpg")" width="160" />
+    <h4>Jody Friese: Groomsman</h4>
+    <p>Jody is Josh's uncle, but he's always been more like a big brother. For some reason, he's been calling Josh "Stompy" since the mid 00's.</p>
+</div>
+
+<div class="wedding-party-profile cf">
+    <img src="@Url.Content("~/Content/images/photos/eric.jpg")" width="160" />
+    <h4>Eric Benjamin: Groomsman</h4>
+    <p>Eric has been good friends with Josh since they went to see The Fifth Element together in 10th grade. He and Alicia are pretty good friends, too -- they ran the Lakefront Marathon together in 2012.</p>
+</div>
+
+<div class="wedding-party-profile cf">
+    <img src="@Url.Content("~/Content/images/photos/tony.jpg")" width="160" />
+    <h4>Tony Van Hart: Usher</h4>
+    <p>Tony has long been one of Alicia and Josh's favorite people. It was his 30th birthday party where the happy couple met. Look for him singing along to R. Kelly on the dance floor.</p>
+</div>
+
+<div class="wedding-party-profile cf">
+    <img src="@Url.Content("~/Content/images/photos/quinn.jpg")" width="160" />
+    <h4>Quinn Loucks: Usher</h4>
+    <p>Quinn is a great friend of both Josh and Alicia. They've shared many a board game and bottle of whiskey. Quinn and Josh could talk for hours about some seriously geeky stuff.</p>
+</div>
