lastm inute updates

--- a/SchultzHanson.Web/Views/Home/Index.cshtml
+++ b/SchultzHanson.Web/Views/Home/Index.cshtml
@@ -15,6 +15,11 @@
 <h3>Reception</h3>
 <p>A reception will follow at the Charles Allis Museum, at 5:00 p.m.</p>
 
+<h3>Social Media</h3>
+<p>We can't possibly be around for all the fun we hope will be going on throughout the day, so we hope some of you will share it with us via social media.</p>
+<p>We're encouraging guests tweeting about the wedding to follow and tweet at <a href="http://twitter.com/SchultzHanson">@@SchultzHanson</a> on Twitter.</p>
+<p>If you're posting photos to Instagram, please hashtag them with <a href="http://statigr.am/tag/schultzhanson">#SchultzHanson</a>.</p>
+
 <h3>Hotel Accomodations</h3>
 <p>
     Knickerbocker on the Lake<br />
