added directions to parking lot

--- a/SchultzHanson.Web/Views/Home/Directions.cshtml
+++ b/SchultzHanson.Web/Views/Home/Directions.cshtml
@@ -26,6 +26,7 @@
         <img src="@Url.Content("/Content/images/allis-map.png")" width="300" class="img-bordered" />
     </p>
     <ul class="direction-list">
+        <li><a href="http://goo.gl/maps/jebcb">From Villa Terrace Museum (to parking lot)</a></li>
         <li><a href="http://goo.gl/maps/DV1tx">From Villa Terrace Museum</a></li>
         <li><a href="http://goo.gl/maps/VlV1y">From Knickerbocker Hotel</a></li>
     </ul>
